<resources>
    <string name="app_name">AppClima</string>
    <string name="text_nome_cidade">Paracatu</string>
    <string name="text_temperatura_atual">%sºC</string>
    <string name="text_temperatura_por_hora">%sº</string>
    <string name="text_temperatura_min_por_dia">%sºC</string>
    <string name="text_temperatura_max_por_dia">%sºC</string>
    <string name="text_descricao">Céu Limpo</string>
    <string name="text_maxima">Máx.: %sº </string>
    <string name="text_minima">Min.: %sº </string>
    <string name="text_titutlo_previsao">Previsão para 10 dias</string>
    <string name="text_titutlo_previsao_descricao">Previsão de consições limpas cerca de 23:00</string>
    <string name="text_hoje">Hoje</string>
    <string name="text_hora">01</string>


    <string name="text_titulo_umidade">Umidade</string>
    <string name="text_valor_umidade">%s </string>
    <string name="text_descricao_umidade">O ponto de orvalho é de 21º agora </string>

    <string name="text_titulo_sensacao">Sensação</string>
    <string name="text_valor_sensacao">%sº</string>
    <string name="text_descricao_sensacao">A umidade está aumentando a sensação térmica </string>

    <string name="text_titulo_chuva">Chuva</string>
    <string name="text_valor_chuva_numero">%s mm</string>
    <string name="text_valor_chuva"><small>nas últimas 24 horas</small> </string>
    <string name="text_descricao_chuva">Próxima prevista: 1 mm sábado </string>

    <string name="text_titulo_visibilidade">Visibilidade</string>
    <string name="text_valor_visibilidade">%s km</string>
    <string name="text_descricao_visibilidade">Está perfeitamente limpo agora </string>
    <string name="text_titulo_tempo">Tempo</string>
    <string name="text_horario">19:50</string>
    <string name="dc_icone_tempo">Ícone representando o sol amarelo</string>
    <string name="dc_img_fundo">Imagem com o céu azul com várias nuvens brancas</string>
    <string name="dc_icon_lupa">Imagem de uma lupa na cor branca</string>
    <string name="hint_input_buscar_cidade">Busque uma cidade</string>
    <string name="text_btn_cancelar">Cancelar</string>
    <string name="text_btn_adicionar">Adicionar</string>
    <string name="text_menu">Menu</string>
    <string name="text_menu_editar_lista">Editar Lista</string>
    <string name="text_menu_notificacoes">Notificações</string>
    <string name="text_menu_celsius">Celsius</string>
    <string name="text_menu_fahrenheit">Fahrenheit</string>
    <string name="dc_icon_lixeira">Imagem de uma lixeira representando a possibilidade de exclusão</string>
    <string name="dc_icon_reordenacao">Icone de quatro riscos representando a possibilidade de reordenação das cidades</string>
    <string name="text_btn_salvar">Salvar</string>


</resources>