<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_principal"
        android:icon="@drawable/ic_menu"
        android:title="@string/text_menu"
        app:showAsAction="ifRoom" >

        <menu>
            <group android:id="@+id/menu_grupo_configuracoes">
            <item
                android:id="@+id/menu_editar_lista"
                android:icon="@drawable/ic_lapis_edicao"
                android:title="@string/text_menu_editar_lista"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_notificacoes"
                android:icon="@drawable/ic_notificacao"
                android:title="@string/text_menu_notificacoes"
                app:showAsAction="never" />
            </group>
            <group android:id="@+id/menu_unidade_medidas"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_celsius"
                    android:icon="@drawable/ic_celsius"
                    android:title="@string/text_menu_celsius"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/menu_fahrenheit"
                    android:icon="@drawable/ic_fahrenheit"
                    android:title="@string/text_menu_fahrenheit" />

            </group>
        </menu>
    </item>

</menu>