<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_horario_primeiro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    android:backgroundTint="@color/azul_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tv_nome_cidade"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/text_nome_cidade"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_temperatura_atual"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="6dp"
            android:text="@string/text_temperatura_atual"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tv_min"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tv_nome_cidade"
            app:layout_constraintTop_toTopOf="@id/tv_nome_cidade"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/tv_horario"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/text_horario"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nome_cidade" />


        <TextView
            android:id="@+id/tv_descricao"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_descricao"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_horario" />

        <TextView
            android:id="@+id/tv_max"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/text_maxima"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tv_descricao"
            app:layout_constraintStart_toEndOf="@id/tv_descricao"
            app:layout_constraintTop_toTopOf="@id/tv_descricao" />

        <TextView
            android:id="@+id/tv_min"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/text_minima"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tv_descricao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_max"
            app:layout_constraintTop_toTopOf="@id/tv_descricao" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
