<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dia_semana"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_hoje"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/icone_tempo_por_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/ic_sun" />

        <TextView
            android:id="@+id/tv_min_por_dia"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="end"
            android:text="@string/text_temperatura_min_por_dia"
            android:textColor="@color/white" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_por_dia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:enabled="false"
            android:stepSize="10.0"
            android:value="50"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:thumbColor="#C13B3B"
            app:thumbRadius="5dp"
            app:tickColor="#C13B3B"
            app:trackColor="#C13B3B" />

        <TextView
            android:id="@+id/tv_max_por_dia"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text_temperatura_max_por_dia"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>